--- a/package.json
+++ b/package.json
@@ -32,9 +32,15 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
